--- a/index.html
+++ b/index.html
@@ -1,12 +1,150 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <!--Блок с навигацией-->
+      <nav class="navigation">
+        <a class="navigation-logo" href="#">
+          <img class="page-heder-logo" src="#" alt="Логотип Седоны">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <!--Блок пользователя - поиск, избранное, ссылка на бронь-->
+        <ul class="navigation-user">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-search" href="#">
+              <span class="visualy-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-favorite" href="#">
+              <span class="visualy-hidden">Избранное</span>
+              <span class="favorite-icon-heart">12</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header-button" href="#">Хочу сюда!</a>
+    </header>
+    <!-- Приветственный блок -->
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
+        <img class="hero-img" src="#" alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
+      </section>
+      <section class="advantages">
+        <!-- Преимущества и туристические плюшки-->
+        <h2 class="visualy-hidden">Преимущества</h2>
+        <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="advantages-img" src="#" alt="Гостиничные дома с цветущими кустарниками на фоне гор">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="advantages-img" src="#" alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
+          </li>
+        </ul>
+        <!-- Приглашение и инфраструктура -->
+        <ul class="infrastructure-list">
+          <li class="infrastructure-item infrastructure-item-hotel-icon">
+            <h3 class="infrastructure-title">Жильё</h3>
+            <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="infrastructure-item infrastructure-item-burger-icon">
+            <h3 class="infrastructure-title">Еда</h3>
+            <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="infrastructure-item infrastructure-item-gift-icon">
+            <h3 class="infrastructure-title">Сувениры</h3>
+            <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Поиск гостиниц и подписка -->
+      <section class="search">
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+          Седоне</p>
+        <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
+      </section>
+      <!--Рассылка-->
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="subscribe-form-name">
+            <label class="visually-hidden" for="email">
+              <span class="visually-hidden">Введите ваш e-mail</span>
+              <input id="email" type="email" placeholder="Ваш e-mail" name="email">
+            </label>
+          </p>
+          <button class="button button-subscribe" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <!-- Подвал -->
+    <footer class="page-footer">
+      <section class="footer-social">
+        <h2 class="visually-hidden">О Седоне - в социальных сетях</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">Telegram</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-contacts">
+         <h2 class="visually-hidden">Контаты</h2>
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="copyright" href="https://htmlacademy.ru/">
+          <span class="visually-hidden">Сделано в HTML Academy</span>
+          <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
+        </a>
+      </section>
+    </footer>
   </body>
+
 </html>
