Правка после ревью

--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,6 @@
           <a class="breadcrumbs-home-link" href="index.html">
             <span class="visually-hidden">Главная</span>
           </a>
-          <img class="breadcrumbs-home-icon" src="#" alt="Домашнаяя страница">
         </li>
         <li class="breadcrumbs-item">
           <img class="breadcrumbs-icon" src="#" alt="Навигационная цепочка-стрелка">
@@ -60,7 +59,7 @@
       </ol>
       <section class="filters-left">
         <h2 class="visually-hidden">Фильтр</h2>
-        <form class="hotel-catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
+        <form class="hotel-catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <h3 class="visually-hidden">Фильтр слева, чек-боксы и радиокнопки</h3>
           <div class="form-container-left">
             <!--Инфраструктура, чекбоксы, множественный выбор-->
@@ -282,7 +281,7 @@
         </ul>
       </section>
       <section class="footer-contacts">
-         <h2 class="visually-hidden">Контаты</h2>
+        <h2 class="visually-hidden">Контаты</h2>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Сделано в HTML Academy</span>
