--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
           <p class="subscribe-form-name">
             <label class="visually-hidden" for="email">
               <span class="visually-hidden">Введите ваш e-mail</span>
@@ -137,7 +137,7 @@
         </ul>
       </section>
       <section class="footer-contacts">
-         <h2 class="visually-hidden">Контаты</h2>
+        <h2 class="visually-hidden">Контаты</h2>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Сделано в HTML Academy</span>
