--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
       <!--Блок с навигацией-->
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-heder-logo" src="#" alt="Логотип Седоны">
+          <img class="page-heder-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -51,7 +51,7 @@
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <img class="breadcrumbs-icon" src="#" alt="Навигационная цепочка-стрелка">
+          <img class="breadcrumbs-icon" src="images/icons/icon-arrow.svg" width="8" height="19.94" alt="Навигационная цепочка-стрелка">
         </li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="#">Гостиницы</a>
@@ -165,7 +165,7 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Ночной вид на карьер">
+            <img class="product-card-img" src="images/hotels/amara.jpg" width="300" height="212" alt="Ночной вид на карьер">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -179,7 +179,7 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Вид на каньон с радугой после грозы">
+            <img class="product-card-img" src="images/hotels/poco-diablo.jpg" width="300" height="212" alt="Вид на каньон с радугой после грозы">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -193,7 +193,7 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Каньон в свете дневного солнца">
+            <img class="product-card-img" src="images/hotels/desert-quai.jpg" width="300" height="212" alt="Каньон в свете дневного солнца">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -207,7 +207,7 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Каньон на фоне ночного неба">
+            <img class="product-card-img" src="images/hotels/greentree.jpg" width="300" height="212" alt="Каньон на фоне ночного неба">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -285,7 +285,7 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Сделано в HTML Academy</span>
-          <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
+          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип HTML Academy">
         </a>
       </section>
     </footer>
