--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!--Блок с навигацией-->
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-heder-logo" src="#" alt="Логотип Седоны">
+          <img class="page-heder-logo" src="images/logo.svg"  width="140" height="70" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -45,7 +45,7 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
-        <img class="hero-img" src="#" alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
+        <img class="hero-img" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
       </section>
       <section class="advantages">
         <!-- Преимущества и туристические плюшки-->
@@ -56,7 +56,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-img" src="#" alt="Гостиничные дома с цветущими кустарниками на фоне гор">
+            <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385" alt="Гостиничные дома с цветущими кустарниками на фоне гор">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -73,7 +73,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="advantages-img" src="#" alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
+            <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385" alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
           </li>
         </ul>
         <!-- Приглашение и инфраструктура -->
@@ -141,7 +141,7 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Сделано в HTML Academy</span>
-          <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
+          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип HTML Academy">
         </a>
       </section>
     </footer>
