--- a/catalog.html
+++ b/catalog.html
@@ -234,7 +234,7 @@
           <a class="pagination-link" href="#">4</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">...</a>
+          <a class="pagination-link pagination-points" href="#">...</a>
         </li>
         <li class="pagination-item">
           <a class="pagination-link" href="#">10</a>
@@ -244,8 +244,8 @@
     </section>
 
 
-    <!--Рассылка-->
-    <section class="subscribe">
+    <!--Рассылка catalog-->
+    <section class="subscribe-catalog">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
       <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -255,7 +255,7 @@
             <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
           </label>
         </p>
-        <button class="button button-subscribe" type="submit">Подписаться</button>
+        <button class="button-subscribe" type="submit">Подписаться</button>
       </form>
     </section>
 
