--- a/index.html
+++ b/index.html
@@ -59,29 +59,34 @@
             <div class="index-colums">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
+            </div>
+            <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
                 alt="Гостиничные дома с цветущими кустарниками на фоне гор">
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-wrapper">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+            <div class="advantages-wrapper">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="advantages-wrapper">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
           </li>
           <li class="advantages-item">
             <div class="index-colums">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-              <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
-                alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
             </div>
+            <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385" alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
           </li>
         </ul>
         <!-- Приезжайте -->
@@ -91,16 +96,22 @@
         <!-- Приглашение и инфраструктура -->
         <ul class="infrastructure-list">
           <li class="infrastructure-item infrastructure-item-hotel-icon">
-            <h3 class="infrastructure-title">Жильё</h3>
-            <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <div class="infrastructure-wrapper">
+              <h3 class="infrastructure-title">Жильё</h3>
+              <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
           </li>
           <li class="infrastructure-item infrastructure-item-burger-icon">
-            <h3 class="infrastructure-title">Еда</h3>
-            <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <div class="infrastructure-wrapper">
+              <h3 class="infrastructure-title">Еда</h3>
+              <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </div>
           </li>
           <li class="infrastructure-item infrastructure-item-gift-icon">
-            <h3 class="infrastructure-title">Сувениры</h3>
-            <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+            <div class="infrastructure-wrapper">
+              <h3 class="infrastructure-title">Сувениры</h3>
+              <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+            </div>
           </li>
         </ul>
       </section>
