--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item-blue">
             <div class="index-colums">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -69,7 +69,7 @@
               <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-1">
             <div class="advantages-wrapper">
               <h3 class="advantages-title">Красивая дорога</h3>
               <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
@@ -81,7 +81,7 @@
               <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-blue">
             <div class="index-colums">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -95,19 +95,19 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <!-- Приглашение и инфраструктура -->
         <ul class="infrastructure-list">
-          <li class="infrastructure-item infrastructure-item-hotel-icon">
+          <li class="infrastructure-item-1 infrastructure-item-hotel-icon">
             <div class="infrastructure-wrapper">
               <h3 class="infrastructure-title">Жильё</h3>
               <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </div>
           </li>
-          <li class="infrastructure-item infrastructure-item-burger-icon">
+          <li class="infrastructure-item-0 infrastructure-item-burger-icon">
             <div class="infrastructure-wrapper">
               <h3 class="infrastructure-title">Еда</h3>
               <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </div>
           </li>
-          <li class="infrastructure-item infrastructure-item-gift-icon">
+          <li class="infrastructure-item-1 infrastructure-item-gift-icon">
             <div class="infrastructure-wrapper">
               <h3 class="infrastructure-title">Сувениры</h3>
               <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
