--- a/index.html
+++ b/index.html
@@ -39,102 +39,110 @@
             </a>
           </li>
         </ul>
+        <a class="header-button" href="#">Хочу сюда!</a>
       </nav>
-      <a class="header-button" href="#">Хочу сюда!</a>
     </header>
+
     <!-- Приветственный блок -->
-    <main class="main-index">
-      <section class="hero">
-        <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
-        <img class="hero-img" src="images/welcome.svg" width="458" height="352"
-          alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
-      </section>
-      <section class="advantages">
-        <!-- Преимущества и туристические плюшки-->
-        <h2 class="visualy-hidden">Преимущества</h2>
-        <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="advantages-list">
-          <li class="advantages-item-blue">
-            <div class="index-colums">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+    <main class="main-container `main-index">
+      <div class="page-container">
+        <section class="hero">
+          <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
+          <img class="hero-img" src="images/welcome.svg" width="458" height="352"
+            alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
+        </section>
+        <section class="advantages">
+          <!-- Преимущества и туристические плюшки-->
+          <h2 class="visualy-hidden">Преимущества</h2>
+          <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ul class="advantages-list">
+            <div class="advantages-item-blue-container">
+              <li class="advantages-item-blue">
+                <div class="index-columns">
+                  <h3 class="advantages-title">Настоящий городок</h3>
+                  <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
+                <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385" alt="Гостиничные дома с цветущими кустарниками на фоне гор">
             </div>
-            <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
-                alt="Гостиничные дома с цветущими кустарниками на фоне гор">
-          </li>
-          <li class="advantages-item">
-            <div class="advantages-wrapper">
-              <h3 class="advantages-title">Небольшая площадь</h3>
-              <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+            </li>
+            <div class="advantages-item-container">
+              <li class="advantages-item-square">
+                <div class="advantages-wrapper">
+                  <h3 class="advantages-title">Небольшая площадь</h3>
+                  <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+                </div>
+              </li>
+              <li class="advantages-item-road">
+                <div class="advantages-wrapper">
+                  <h3 class="advantages-title">Красивая дорога</h3>
+                  <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
+              </li>
+              <li class="advantages-item-tourism">
+                <div class="advantages-wrapper">
+                  <h3 class="advantages-title">Мало туристов</h3>
+                  <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+                </div>
+              </li>
             </div>
-          </li>
-          <li class="advantages-item-1">
-            <div class="advantages-wrapper">
-              <h3 class="advantages-title">Красивая дорога</h3>
-              <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-          </li>
-          <li class="advantages-item">
-            <div class="advantages-wrapper">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
-            </div>
-          </li>
-          <li class="advantages-item-blue">
-            <div class="index-colums">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            </div>
-            <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385" alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
-          </li>
-        </ul>
-        <!-- Приезжайте -->
-        <h2 class="visualy-hidden">Приезжайте</h2>
-        <p class="tagline">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-        <p>Опытный персонал и качественное обслуживание!</p>
-        <!-- Приглашение и инфраструктура -->
-        <ul class="infrastructure-list">
-          <li class="infrastructure-item-1 infrastructure-item-hotel-icon">
-            <div class="infrastructure-wrapper">
-              <h3 class="infrastructure-title">Жильё</h3>
-              <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </div>
-          </li>
-          <li class="infrastructure-item-0 infrastructure-item-burger-icon">
-            <div class="infrastructure-wrapper">
-              <h3 class="infrastructure-title">Еда</h3>
-              <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </div>
-          </li>
-          <li class="infrastructure-item-1 infrastructure-item-gift-icon">
-            <div class="infrastructure-wrapper">
-              <h3 class="infrastructure-title">Сувениры</h3>
-              <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
-            </div>
-          </li>
-        </ul>
-      </section>
-      <!-- Поиск гостиниц и подписка -->
-      <section class="search">
-        <h2 class="search-title">Заинтересовались?</h2>
-        <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
-      </section>
-      <!--Рассылка-->
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
-          <p class="subscribe-form-name">
-            <label class="visually-hidden" for="email">
-              <span class="visually-hidden">Введите ваш e-mail</span>
-              <input id="email" type="email" placeholder="Ваш e-mail" name="email">
-            </label>
-          </p>
-          <button class="button-subscribe" type="submit">Подписаться</button>
-        </form>
-      </section>
+            <li class="advantages-item-blue">
+              <div class="index-columns">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
+              <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
+                alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
+            </li>
+          </ul>
+          <!-- Приезжайте -->
+          <h2 class="visualy-hidden">Приезжайте</h2>
+          <p class="tagline">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p>Опытный персонал и качественное обслуживание!</p>
+          <!-- Приглашение и инфраструктура -->
+          <ul class="infrastructure-list">
+            <li class="infrastructure-item-hotel infrastructure-item-hotel-icon">
+              <div class="infrastructure-wrapper">
+                <h3 class="infrastructure-title">Жильё</h3>
+                <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
+            </li>
+            <li class="infrastructure-item-burger infrastructure-item-burger-icon">
+              <div class="infrastructure-wrapper">
+                <h3 class="infrastructure-title">Еда</h3>
+                <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+            </li>
+            <li class="infrastructure-item-gift infrastructure-item-gift-icon">
+              <div class="infrastructure-wrapper">
+                <h3 class="infrastructure-title">Сувениры</h3>
+                <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <!-- Поиск гостиниц и подписка -->
+        <section class="search">
+          <h2 class="search-title">Заинтересовались?</h2>
+          <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+            Седоне</p>
+          <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
+        </section>
+        <!--Рассылка-->
+        <section class="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
+            <p class="subscribe-form-name">
+              <label class="visually-hidden" for="email">
+                <span class="visually-hidden">Введите ваш e-mail</span>
+                <input id="email" type="email" placeholder="Ваш e-mail" name="email">
+              </label>
+            </p>
+            <button class="button-subscribe" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </div>
     </main>
     <!-- Подвал -->
     <footer class="page-footer">
@@ -147,7 +155,7 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
