--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header page-container">
       <!--Блок с навигацией-->
       <nav class="navigation">
         <a class="navigation-logo" href="#">
@@ -44,7 +44,7 @@
     </header>
 
     <!-- Приветственный блок -->
-    <main class="main-container `main-index">
+    <main class="main-container main-index">
       <div class="page-container">
         <section class="hero">
           <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
@@ -57,14 +57,13 @@
           <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
-            <div class="advantages-item-blue-container">
-              <li class="advantages-item-blue">
-                <div class="index-columns">
-                  <h3 class="advantages-title">Настоящий городок</h3>
-                  <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                </div>
-                <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385" alt="Гостиничные дома с цветущими кустарниками на фоне гор">
-            </div>
+            <li class="advantages-item-blue">
+              <div class="index-columns">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
+                alt="Гостиничные дома с цветущими кустарниками на фоне гор">
             </li>
             <div class="advantages-item-container">
               <li class="advantages-item-square">
@@ -145,7 +144,7 @@
       </div>
     </main>
     <!-- Подвал -->
-    <footer class="page-footer">
+    <footer class="page-footer page-container">
       <section class="footer-social">
         <h2 class="visually-hidden">О Седоне - в социальных сетях</h2>
         <ul class="footer-social-list">
