--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
-  <body>
-    <header class="page-header page-container">
+  <body class="page-container">
+    <header class="page-header">
       <!--Блок с навигацией-->
       <nav class="navigation">
         <a class="navigation-logo" href="#">
@@ -61,38 +61,26 @@
           <p class="slogan">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-item-blue">
-              <div class="index-columns">
-                <h3 class="advantages-title-blue">Настоящий <br>городок</h3>
-                <p class="advantages-desc-blue">Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
-              </div>
+              <h3 class="advantages-title-blue">Настоящий <br>городок</h3>
+              <p class="advantages-desc-blue">Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
               <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
                 alt="Гостиничные дома с цветущими кустарниками на фоне гор">
             </li>
-            <div class="advantages-item-container">
-              <li class="advantages-item-square">
-                <div class="advantages-wrapper">
-                  <h3 class="advantages-title-square">Небольшая <br>площадь</h3>
-                  <p class="advantages-desc-square">Все достопримечательности <br>находятся очень близко</p>
-                </div>
-              </li>
-              <li class="advantages-item-road">
-                <div class="advantages-wrapper">
-                  <h3 class="advantages-title-road">Красивая <br>дорога</h3>
-                  <p class="advantages-desc-road">Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
-                </div>
-              </li>
-              <li class="advantages-item-tourism">
-                <div class="advantages-wrapper">
-                  <h3 class="advantages-title-tourism">Мало <br>туристов</h3>
-                  <p class="advantages-desc-tourism">Большинство едет в Гранд <br>Каньон и толпится там</p>
-                </div>
-              </li>
-            </div>
+            <li class="advantages-item-square">
+              <h3 class="advantages-title-square">Небольшая <br>площадь</h3>
+              <p class="advantages-desc-square">Все достопримечательности <br>находятся очень близко</p>
+            </li>
+            <li class="advantages-item-road">
+              <h3 class="advantages-title-road">Красивая <br>дорога</h3>
+              <p class="advantages-desc-road">Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
+            </li>
+            <li class="advantages-item-tourism">
+              <h3 class="advantages-title-tourism">Мало <br>туристов</h3>
+              <p class="advantages-desc-tourism">Большинство едет в Гранд <br>Каньон и толпится там</p>
+            </li>
             <li class="advantages-item-blue">
-              <div class="index-columns">
-                <h3 class="advantages-title">Там есть <br>мост дьявола</h3>
-                <p class="advantages-desc">Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
-              </div>
+              <h3 class="advantages-title-blue">Там есть <br>мост дьявола</h3>
+              <p class="advantages-desc-blue">Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
               <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
                 alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
             </li>
