--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -11,12 +12,12 @@
     <header class="page-header">
       <!--Блок с навигацией-->
       <nav class="navigation">
-        <a class="navigation-logo" href="#">
+        <a class="navigation-logo" href="index.html">
           <img class="page-heder-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Главная</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
