обработка после PP

--- a/catalog.html
+++ b/catalog.html
@@ -72,10 +72,6 @@
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <img class="breadcrumbs-icon" src="images/icons/icon-arrow.svg" width="8" height="19.94"
-            alt="Навигационная цепочка-стрелка">
-        </li>
-        <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="#">Гостиницы</a>
         </li>
       </ul>
@@ -290,7 +286,7 @@
     <!--Рассылка-->
     <section class="subscribe subscribe-catalog">
       <h2 class="subscribe-title subscribe-title-catalog">Подпишитесь на рассылку</h2>
-      <p class="subscribe-desc subscribe-desc-catalog">Только полезная информация и никакого спама, честное
+      <p class="subscribe-desc subscribe-desc-catalog">Только полезная информация и никакого спама,<br>честное
         бойскаутское!</p>
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
         <label class="subscribe-field-label" for="email">
@@ -300,8 +296,6 @@
         <button class="button-subscribe" type="submit">Подписаться</button>
       </form>
     </section>
-    </main>
-
     <!-- Подвал -->
     <footer class="page-footer page-container">
       <section class="footer-social">
