--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <ul class="infrastructure-list">
           <li class="infrastructure-item infrastructure-item-hotel">
             <h3 class="infrastructure-title">Жильё</h3>
-            <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить в настоящем мотеле,<br>
+            <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить в&nbsp;настоящем мотеле,<br>
               всё как в кино!
             </p>
 
