--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <h2 class="visually-hidden">Контакты</h2>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </section>
-      <a class="copyright" href="https://htmlacademy.ru/">
+      <a class="copyright" href="https://htmlacademy.ru/intensive/htmlcss">
         <span class="visually-hidden">Сделано в HTML Academy</span>
         <svg width="115" height="33" viewBox="0 0 115 33" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 12.9V15.5H2.5V12.9H0Z" fill="black" />
