--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="#">Гостиницы</a>
+          <a class="breadcrumbs-link">Гостиницы</a>
         </li>
       </ul>
       <section class="filters">
@@ -163,7 +163,7 @@
           </fieldset>
           <div class="filter-button-form">
             <button class="catalog-filter-submit" type="submit">Применить</button>
-            <button class="catalog-filter-reset" type="submit">Сбросить</button>
+            <button class="catalog-filter-reset" type="reset">Сбросить</button>
           </div>
         </form>
       </section>
