--- a/catalog.html
+++ b/catalog.html
@@ -180,17 +180,17 @@
         </div>
         <ul class="buttons-view">
           <li class="buttons-view-item-current">
-            <a class="buttons-view-tile buttons-view-tile-current" href="#">
+            <a class="buttons-view-tile buttons-view-tile-current" href="?view=tile">
               <span class="visually-hidden">Плитка</span>
             </a>
           </li>
           <li class="buttons-view-item">
-            <a class="buttons-view-card" href="#">
+            <a class="buttons-view-card" href="?view=card">
               <span class="visually-hidden">Карточка</span>
             </a>
           </li>
           <li class="buttons-view-item">
-            <a class="buttons-view-list" href="#">
+            <a class="buttons-view-list" href="?view=list">
               <span class="visually-hidden">Список</span>
             </a>
           </li>
