третья правка по замечаниям

--- a/catalog.html
+++ b/catalog.html
@@ -178,7 +178,7 @@
           <div class="select-wrapper">
             <select class="select-control" aria-label="Сортировка">
               <option class="select-control-text" value="cheap">Сначала дешевые</option>
-              <option class="select-control-text">Сначала дорогие</option>
+              <option class="select-control-text" value="cheap">Сначала дорогие</option>
             </select>
           </div>
           <ul class="buttons-view">
