--- a/catalog.html
+++ b/catalog.html
@@ -212,7 +212,7 @@
               </div>
             </a>
             <a class="product-card-button-about" href="#">Подробнее</a>
-            <button class="add-button-favorite" href="#">В избранное</button>
+            <button class="add-button-favorite" type="button">В избранное</button>
             <p class="product-stars product-stars-four icon-star"><span class="visually-hidden">4 звезды</span></p>
             <p class="product-card-reiting">Рейтинг: 8,5</p>
           </li>
@@ -227,7 +227,7 @@
               </div>
             </a>
             <a class="product-card-button-about" href="#">Подробнее</a>
-            <button class="added-button-favorite" href="#">В избранном</button>
+            <button class="added-button-favorite" type="button">В избранном</button>
             <p class="product-stars product-stars-four icon-star"><span class="visually-hidden">4 звезды</span></p>
             <p class="product-card-reiting">Рейтинг: 9,2</p>
           </li>
@@ -242,7 +242,7 @@
               </div>
             </a>
             <a class="product-card-button-about" href="#">Подробнее</a>
-            <button class="add-button-favorite" href="#">В избранное</button>
+            <button class="add-button-favorite" type="button">В избранное</button>
             <p class="product-stars product-stars-three icon-star"><span class="visually-hidden">3 звезды</span></p>
             <p class="product-card-reiting">Рейтинг: 6,9</p>
           </li>
@@ -257,7 +257,7 @@
               </div>
             </a>
             <a class="product-card-button-about" href="#">Подробнее</a>
-            <button class="add-button-favorite" href="#">В избранное</button>
+            <button class="add-button-favorite" type="button">В избранное</button>
             <p class="product-stars product-stars-two icon-star"><span class="visually-hidden">2 звезды</span></p>
             <p class="product-card-reiting">Рейтинг: 5,0</p>
           </li>
